2004-07-22	blytkerchan
	* version: new file

	* semaphore.c: new file
	* semaphore.h: ditto
	* module.mk: ditto

2004-07-19	blytkerchan
	* how_semaphores_work.txt: new file

2004-07-17	blytkerchan
	* ChangeLog: new file
	* Makefile: ditto
	* barrier.c: ditto
	* barrier.h: ditto
	* critical_section.c: ditto
	* critical_section.h: ditto
	* how_critical_sections_work.txt: ditto
	* thread.c: ditto
	* thread.h: ditto
